# synology-srm

./: .travis.yml  CODEOWNERS  Pipfile  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: dependabot.yml  funding.yml  stale.yml
.github/workflows/: linter.yml  release.yml  test.yml
synology_srm/: __init__.py  __version__.py  client.py  http.py
synology_srm/api/: __init__.py  base.py  core.py  mesh.py
tests/: api.py  base.py  payload.py  test_base.py  test_core.py  test_login.py  test_mesh.py
