[tool.poetry]
name = "synology-srm"
version = "0.2.3"
description = "Python Synology SRM API client"
authors = ["Julien Brochet <julien@aerialls.eu>"]
readme = "README.md"
packages = [{include = "synology_srm"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
requests = "2.28.2"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
nose2 = "0.12.0"
requests_mock = "1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
